kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mini-finance-deployment
  labels:
    app: mini-finance
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mini-finance
  template:
    metadata:
      labels:
        app: mini-finance
    spec:
      containers:
        - name: mini-finance
          image: 
          ports:
            - containerPort: 80
