kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mini-finance-service
spec:
  selector:
    app: mini-finance
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
