kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mini-finance-ingress
  annotations:
    kubernetes.io/ingress.class: false     
    alb.ingress.kubernetes.io/scheme: false
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mini-finance-service
                port:
                  number: 80
